10_infra/security_group.tf
# ---------------------------------------------
# Security Group
# ---------------------------------------------
# web security group
resource "aws_security_group" "web_sg" {
  name        = "${var.project}-${var.environment}-web-sg"
  description = "web front role security group"
  vpc_id      = local.vpc_id

  tags = {
    Name    = "${var.project}-${var.environment}-web-sg"
    Project = var.project
    Env     = var.environment
  }
}
#
#resource "aws_security_group_rule" "web_in_http" {
#  security_group_id = aws_security_group.web_sg.id
#  type              = "ingress"
#  protocol          = "tcp"
#  from_port         = 80
#  to_port           = 80
#  cidr_blocks       = ["0.0.0.0/0"]
#}
#
#resource "aws_security_group_rule" "web_in_https" {
#  security_group_id = aws_security_group.web_sg.id
#  type              = "ingress"
#  protocol          = "tcp"
#  from_port         = 443
#  to_port           = 443
#  cidr_blocks       = ["0.0.0.0/0"]
#}
#
#resource "aws_security_group_rule" "web_out_tcp3000" {
#  security_group_id        = aws_security_group.web_sg.id
#  type                     = "egress"
#  protocol                 = "tcp"
#  from_port                = 3000
#  to_port                  = 3000
#  source_security_group_id = aws_security_group.app_sg.id
#}

# app security group
resource "aws_security_group" "app_sg" {
  name        = "${var.project}-${var.environment}-app-sg"
  description = "application server role security group"
  vpc_id      = local.vpc_id

  tags = {
    Name    = "${var.project}-${var.environment}-app-sg"
    Project = var.project
    Env     = var.environment
  }
}

resource "aws_security_group_rule" "app_in_http" {
  security_group_id        = aws_security_group.app_sg.id
  type                     = "ingress"
  protocol                 = "tcp"
  from_port                = 80
  to_port                  = 80
  cidr_blocks              = ["0.0.0.0/0"]
}

resource "aws_security_group_rule" "app_in_tcp3000" {
  security_group_id        = aws_security_group.app_sg.id
  type                     = "ingress"
  protocol                 = "tcp"
  from_port                = 3000
  to_port                  = 3000
#  source_security_group_id = aws_security_group.web_sg.id
  cidr_blocks              = ["0.0.0.0/0"]  # ロードバランサーを追加したら元に戻す
}

# resource "aws_security_group_rule" "app_out_http" {
#   security_group_id = aws_security_group.app_sg.id
#   type              = "egress"
#   protocol          = "tcp"
#   from_port         = 80
#   to_port           = 80
#   prefix_list_ids   = [data.aws_prefix_list.s3_pl.id]
# }

# resource "aws_security_group_rule" "app_out_https" {
#   security_group_id = aws_security_group.app_sg.id
#   type              = "egress"
#   protocol          = "tcp"
#   from_port         = 443
#   to_port           = 443
#   prefix_list_ids   = [data.aws_prefix_list.s3_pl.id]
# }

resource "aws_security_group_rule" "app_out_tcp3306" {
  security_group_id        = aws_security_group.app_sg.id
  type                     = "egress"
  protocol                 = "tcp"
  from_port                = 3306
  to_port                  = 3306
  source_security_group_id = aws_security_group.db_sg.id
}

resource "aws_security_group_rule" "app_out_vpc_endpoint" {
  security_group_id        = aws_security_group.app_sg.id
  type                     = "egress"
  protocol                 = "tcp"
  from_port                = 443
  to_port                  = 443
  cidr_blocks              = ["0.0.0.0/0"]
# 宛先にVPCエンドポイントを作成するサブネットのCIDRを指定しても機能しない。なぜ？
#  cidr_blocks              = [data.aws_subnet.vpc_endpoint.cidr_block]
# 宛先にVPCエンドポイントが紐づくセキュリティグループを指定しても機能しない
#  source_security_group_id = aws_security_group.vpc_endpoint_sg.id
}

## opmng security group
#resource "aws_security_group" "opmng_sg" {
#  name        = "${var.project}-${var.environment}-opmng-sg"
#  description = "operation and management role security group"
#  vpc_id      = aws_vpc.vpc.id
#
#  tags = {
#    Name    = "${var.project}-${var.environment}-opmng-sg"
#    Project = var.project
#    Env     = var.environment
#  }
#}
#
#resource "aws_security_group_rule" "opmng_in_ssh" {
#  security_group_id = aws_security_group.opmng_sg.id
#  type              = "ingress"
#  protocol          = "tcp"
#  from_port         = 22
#  to_port           = 22
#  cidr_blocks       = ["0.0.0.0/0"]
#}
#
#resource "aws_security_group_rule" "opmng_in_tcp3000" {
#  security_group_id = aws_security_group.opmng_sg.id
#  type              = "ingress"
#  protocol          = "tcp"
#  from_port         = 3000
#  to_port           = 3000
#  cidr_blocks       = ["0.0.0.0/0"]
#}
#
#resource "aws_security_group_rule" "opmng_out_http" {
#  security_group_id = aws_security_group.opmng_sg.id
#  type              = "egress"
#  protocol          = "tcp"
#  from_port         = 80
#  to_port           = 80
#  cidr_blocks       = ["0.0.0.0/0"]
#}
#
#resource "aws_security_group_rule" "opmng_out_https" {
#  security_group_id = aws_security_group.opmng_sg.id
#  type              = "egress"
#  protocol          = "tcp"
#  from_port         = 443
#  to_port           = 443
#  cidr_blocks       = ["0.0.0.0/0"]
#}

# db security group
resource "aws_security_group" "db_sg" {
  name        = "${var.project}-${var.environment}-db-sg"
  description = "database role security group"
  vpc_id      = local.vpc_id

  ingress {
    protocol        = "tcp"
    from_port       = 3306
    to_port         = 3306
    security_groups = [aws_security_group.app_sg.id]
  }

  tags = {
    Name    = "${var.project}-${var.environment}-db-sg"
    Project = var.project
    Env     = var.environment
  }
}

# VPCエンドポイント security group
resource "aws_security_group" "vpc_endpoint_sg" {
  name        = "${var.project}-${var.environment}-vpc-endpoint-sg"
  vpc_id      = local.vpc_id

  ingress {
    protocol        = "-1"
    from_port       = 0
    to_port         = 0
    security_groups = [aws_security_group.app_sg.id]
  }
}
